--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Reddit B</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/flatly/bootstrap.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
   <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
@@ -15,13 +16,15 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body ng-app='reddit'>
-  <div class="container">
-    <h1>Reddit B</h1>
-  </div>
+  <div ng-include="'src/views/nav/nav.html'"></div>
+
   <ui-view></ui-view>
 
   <script src="src/module.js"></script>
   <script src="src/controllers/index.js"></script>
+  <script src="src/controllers/nav.js"></script>
+  <script src="src/controllers/users.js"></script>
+  <script src="src/models/auth.js"></script>
   
 </body>
 </html>
