--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Reddit B</title>
+  <title>Reddit Clone</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/flatly/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.0/sweetalert.min.css">
@@ -26,7 +26,9 @@
   <script src="src/controllers/index.js"></script>
   <script src="src/controllers/nav.js"></script>
   <script src="src/controllers/users.js"></script>
-  <script src="src/models/auth.js"></script>
-  
+  <script src="src/controllers/post.js"></script>
+  <script src="src/directives/auth.js"></script>
+  <!-- <script src="src/models/auth.js"></script> -->
+
 </body>
 </html>
