--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <script src="src/controllers/nav.js"></script>
   <script src="src/controllers/users.js"></script>
   <script src="src/controllers/post.js"></script>
-  <script src="src/directives/auth.js"></script>
-  <!-- <script src="src/models/auth.js"></script> -->
+  <!-- <script src="src/directives/auth.js"></script> -->
+  <script src="src/models/auth.js"></script>
 
 </body>
 </html>
